assets/css/style.css
/********************************************************************************
****************************** Colors and measures ******************************
/********************************************************************************/
:root {
	--back-width: 26px;

	--navbar-h-noshrink: 100px;
	--nav-buttons-h: 71px;
}

@media only screen and (max-width: 1023px) {
	:root {
		--navbar-h-noshrink: 80px;
	}
}

@media (prefers-color-scheme: light) {
	:root {
		--text: #212121;
		--background: #fafafa;
		--link-highlight: rgba(0, 0, 0, 0.1);

		--theme-color: #fafafa;

		--circle: #eee;

		--button-border: #141414;
		--button-bg-hover: #212121;
		--button-bg-hover-inverted: #fafafa;

		--navbar-bg: rgba(255 255 255 / 50%);
		--navbar-border: rgba(0 0 0 / 5%);

		--img-border: #bdbdbd;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--text: #fafafa;
		--background: #212121;
		--link-highlight: rgba(255, 255, 255, 0.2);

		--theme-color: #191919;

		--circle: #333;

		--button-border: #fafafa;
		--button-bg-hover: #fafafa;
		--button-bg-hover-inverted: #212121;

		--navbar-bg: rgba(0 0 0 / 20%);
		--navbar-border: rgba(0 0 0 / 5%);

		--img-border: #424242;
	}
}

/********************************************************************************
************************************ General ************************************
/********************************************************************************/
* {
	box-sizing: border-box;
	-webkit-tap-highlight-color: transparent;
	scroll-behavior: smooth;
}

html {
	/*TODO reenable bounce on the navigation contaner in some way? */
	overscroll-behavior-y: none;
	text-size-adjust: none;
	-webkit-text-size-adjust: none;
	-moz-text-size-adjust: none;
	-ms-text-size-adjust: none;
	overflow-x: hidden;
	background: var(--background);
	/* leave background here for smooth opacity transition */
}

body {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	margin: 0;
	width: 100vw;
	min-height: 100vh;
	background: var(--background);
}

.pagefixed {
	position: fixed;
	pointer-events: none;
}

.invisible {
	visibility: hidden;
}

.blink {
	animation: blink 1.5s infinite;
}

@media (prefers-color-scheme: light) {
	@keyframes blink {
		0% {
			filter: brightness(1);
		}

		50% {
			filter: brightness(0.9);
		}

		100% {
			filter: brightness(1);
		}
	}
}

@media (prefers-color-scheme: dark) {
	@keyframes blink {
		0% {
			filter: brightness(1);
		}

		50% {
			filter: brightness(1.2);
		}

		100% {
			filter: brightness(1);
		}
	}
}

body,
a {
	color: var(--text);
}

p {
	margin: 0 0 18px;
}

.noanim {
	transition: none !important;
}

.noanim-all,
.noanim-all * {
	transition: none !important;
}

:focus-visible {
	outline: none;
}

@media (prefers-color-scheme: light) {
	.dark {
		display: none;
	}
}

@media (prefers-color-scheme: dark) {
	.light {
		display: none;
	}
}

@media only screen and (max-width: 1023px) {
	.hide-1024 {
		display: none !important;
	}
}

@media only screen and (min-width: 1024px) {
	.show-1024 {
		display: none !important;
	}
}

/********************************************************************************
*************************** Navigation specific (js) ****************************
/********************************************************************************/
#circle-reveal {
	background: var(--circle);
	width: 1px;
	height: 1px;
	border-radius: 50%;
	position: fixed;
	transition: transform .4s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity .3s ease;
	transform: scale(1);
	/* not setting z-index on purpose for navbar */
}

#circle-reveal.fadeout {
	opacity: 0;
}

#navigation {
	width: 100vw;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	opacity: 0;
	transition: opacity .1s ease, transform .4s ease;
}

#navigation.ready {
	opacity: 1;
	transform: none;
}

#navigation.navigate-back.inverse {
	transform: translateX(-200px);
}

#navigation.navigate-forward.inverse {
	transform: translateX(200px);
}

#navigation.navigate-forward {
	opacity: 0;
	transform: translateX(-200px);
}

#navigation.navigate-back {
	opacity: 0;
	transform: translateX(200px);
}

/********************************************************************************
*************************** Page paddings and styles ****************************
/********************************************************************************/
.content {
	background: var(--background);
}

#footer,
.content {
	margin: 100px 20vw 0;
}

@media only screen and (max-width: 1600px) {

	#footer,
	.content {
		margin: 100px 175px 0;
	}
}

@media only screen and (max-width: 1250px) {

	#footer,
	.content {
		margin: 92px 75px 0;
	}
}

@media only screen and (max-width: 800px) {

	#footer,
	.content {
		margin: 92px 50px 0;
	}
}

@media only screen and (max-width: 600px) {

	#footer,
	.content {
		margin: 92px 20px 0;
	}
}

/********************************************************************************
************************************ Footer *************************************
/********************************************************************************/
#footer {
	position: relative;
	margin-top: auto !important;
	text-align: center;
	padding: 30px 20px;
	font-size: 15px;
}

.cookie-settings {
	display: inline-block;
	color: #A1887F;
	transition: color .15s ease;
}

.cookie-settings>i {
	padding-right: 3px;
}

@media only screen and (max-width: 1023px) {
	#footer {
		padding: 20px 20px 100px;
	}
}

@media (hover: hover) {

	.cookie-settings:hover,
	.cookie-settings:focus-visible {
		color: #FFCC80;
	}
}

@media (hover: none) {

	.cookie-settings:active,
	.cookie-settings:focus-visible {
		color: #FFCC80;
	}
}
/* ... */

